--- a/index.html
+++ b/index.html
@@ -9,14 +9,28 @@
   </style>
 </head>
 <body>
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  <div class="social-links-profile">
+    <div class="social-links-profile__image"></div>
+    <p class="social-links-profile__name">Jessica Randall</p>
+    <p class="social-links-profile__location">London, United Kingdom</p>
+    <p class="social-links-profile__about">"Front-end developer and avid reader."</p>
+    <ul class="social-links-profile__platforms-list">
+      <li class="social-links-profile__platforms-item">
+        <a href="#">GitHub</a>
+      </li>
+      <li class="social-links-profile__platforms-item">
+        <a href="#">Frontend Mentor</a>
+      </li>
+      <li class="social-links-profile__platforms-item">
+        <a href="#">LinkedIn</a>
+      </li>
+      <li class="social-links-profile__platforms-item">
+        <a href="#">Twitter</a>
+      </li>
+      <li class="social-links-profile__platforms-item">
+        <a href="#">Instagram</a>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
